# newsletter

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
migrations/: 20240321213450_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
