[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
config = "0.14"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.35", default-features = false, features = ["clock"] }
env_logger = "0.11"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.9"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11"
